wrapped rot info image in container to avoid jumping on load

--- a/application/ui/src/components/Modal/Modal.css
+++ b/application/ui/src/components/Modal/Modal.css
@@ -67,8 +67,13 @@
             margin: 0 5px;
         }
 
-        img {
-            max-height: 225px;
+        .img-container {
+            position: relative;
+            height: clamp(200px, 25vh, 300px);
+
+            img {
+                height: 100%;
+            }
         }
 
         .close-button {
